# ETL-testing

data-generator/: go.sum  main.go
engines/beam/go/: go.mod  go.sum
engines/beam/python/: main.py
jsonl/data-generator/: go.mod
jsonl/engines/beam/go/: main.go  result.txt
jsonl/langs/elixir/elixir_flow/: mix.exs
jsonl/langs/elixir/elixir_flow/lib/: elixir_flow.ex
jsonl/langs/elixir/elixir_stream/: .gitignore
jsonl/langs/go/go-batched/: main.go
jsonl/langs/go/rxgo/: go.mod  go.sum
jsonl/langs/haskell/stream/: shell.nix
jsonl/langs/js/js-readline/: pnpm-lock.yaml
jsonl/langs/nim/nim-stream/: main  main.nim
jsonl/langs/nu/: shell.nix
jsonl/langs/rust/rust-rayon/: Cargo.toml
langs/elixir/elixir_flow/: .gitignore
langs/elixir/elixir_flow/lib/: elixir_flow.ex
langs/elixir/elixir_flow/test/: elixir_flow_test.exs
langs/elixir/elixir_stream/: mix.exs
langs/elixir/elixir_stream/lib/: elixir_stream.ex
langs/elixir/elixir_stream/test/: elixir_stream_test.exs
langs/go/: shell.nix
langs/go/go-batched/: go.mod
langs/go/go-buffered/: go.mod  main.go
langs/go/rxgo/: main.go
langs/haskell/stream/: CHANGELOG.md  etl-stream.cabal
langs/haskell/stream/app/: Main.hs
langs/js/js-readline/: main.js  package.json
langs/js/js-readline/src/: main.ts
langs/js/rxjs/: package.json
langs/js/rxjs/src/: main.ts
langs/kotlin/stream/: settings.gradle.kts  shell.nix
langs/nu/: script.nu
langs/rust/rust-buffered/: Cargo.toml
langs/rust/rust-polars/: Cargo.toml
langs/rust/rust-polars/src/: main.rs
langs/rust/rust-rayon/src/: main.rs
(+5 files in other folders)
