cabal-version:      2.4
name:               etl-stream
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nicolai Thomassen
maintainer:         nicolai-thomassen@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable etl-stream
    main-is:          Main.hs
    ghc-options: -O3

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.16.4.0,
                   aeson,
                   bytestring,
                   text,
                   vector,
                   unordered-containers,
                   containers
    hs-source-dirs:   app
    default-language: Haskell2010
