[package]
name = "rust-polars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.27.2", features = ["lazy", "json", "dtype-full"] }
polars-core = {version = "0.27.2", features = ["dtype-struct"]}


